# LitExtract

./: .gitignore  README.md  dataframe_plots.ipynb  pyproject.toml
data/: 20251003_Elicitrevised.csv
data/cleancsv/: Artifact_Methods_cleaned.csv  Outcome_Keywords_cleaned.csv  Step_Keywords_cleaned.csv
scripts/: clean_elicitdatacsv.py  extractmethods.py  fig1_cohort_task.py  fig2_eegelec_gait.py  fig3_stepsnetwork.py  fig4_steps_upset.py  fig5_artifactrej.py  filter_researcharticles.py  retrieve_articles.py
utils/: article_fetcher.py  cleandata.py  config.py  keywords.txt  log_search.py  methodstext.py  prompts.txt  saveas.py
