[tool.poetry]
name = "LitExtract"
version = "0.1.0"
description = "Literature and information retrieval from biomedical publications"
authors = ["Vaishali Vinod <vaishalivinod97@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "utils"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.0"
networkx = "^3.3"

# Jupyter + notebooks
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
black = "^24.8.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
nbstripout = "^0.7.1"  

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"